# annorepo-python-client

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTORS  Makefile  README.md  USAGE.md  poetry_scripts.py  pyproject.toml
.github/workflows/: python-package.yml
annorepo/: __init__.py  client.py  model.py
annorepo/grpc/: annotation_upload_service_pb2.py  annotation_upload_service_pb2.pyi  annotation_upload_service_pb2_grpc.py  hello_service_pb2.py  hello_service_pb2.pyi  hello_service_pb2_grpc.py
docs/: annorepo-client-demo.ipynb  conf.py  index.rst  requirements.txt  usage.rst
docs/annorepo/: client.html  index.html  model.html
scripts/: evaluate-annorepo-server.py  extract-container-delegate.py  loadtest-annorepo-server.py  test-annorepo-grpc.py
tests/: test_annorepo_client.py
