[tool.poetry]
name = "annorepo-client"
version = "0.1.3-alpha.0"
description = "A Python client for accessing an AnnoRepo server"
authors = ["Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/brambg/annorepo-python-client"
repository = "https://github.com/brambg/annorepo-python-client"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "annorepo" }]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
colorama = "^0.4.4"
icecream = "^2.1.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/brambg/annorepo-python-client/issues"

[tool.poetry.scripts]
version = 'poetry_scripts:version'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
