[tool.poetry]
name = "annorepo-client"
version = "0.2.1"
description = "A Python client for accessing an AnnoRepo server"
authors = ["Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/knaw-huc/annorepo-python-client"
repository = "https://github.com/knaw-huc/annorepo-python-client"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "annorepo" }]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
colorama = "^0.4.4"
icecream = "^2.1.2"
tabulate = "^0.9.0"
#grpcio = "^1.59.0"
google = "^3.0.0"
google-api-python-client = "^2.103.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/knaw-huc/annorepo-python-client/issues"

[tool.poetry.scripts]
version = 'poetry_scripts:version'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
